# csplib

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  NOTICE  README.md  build_wheel.py  clean.py  implementation_plan.md  project.md  pyproject.toml  release-please-config.json  setup.py
.claude/: settings.local.json
.claude/agents/: architect.md  doc-organizer.md  feature-driver.md  implementer.md  performance-optimizer.md  security-reviewer.md  test-planner.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-wheels.yml  ci.new.yml  ci.yml  commitlint.yml  release-please.new.yml  release-please.yml  release.new.yml  release.yml
csp_lib/: __init__.py
csp_lib/alarm/: __init__.py  aggregator.py  protocols.py  redis_adapter.py
csp_lib/can/: config.py  exceptions.py
csp_lib/cluster/: __init__.py  config.py  context.py  controller.py  election.py  sync.py
csp_lib/controller/: __init__.py  calibration.py  compensator.py  discovery.py  protocol.py
csp_lib/core/: __init__.py  _numeric.py  _time_anchor.py  errors.py  flush_mixin.py  health.py  lifecycle.py  reconciler.py  resilience.py  runtime_params.py
csp_lib/equipment/: __init__.py
csp_lib/grpc/: __init__.py
csp_lib/gui/: __init__.py  app.py  config.py  dependencies.py
csp_lib/integration/: __init__.py  command_refresh.py  command_router.py  context_builder.py  data_feed.py  distributor.py  group_controller.py  heartbeat.py  heartbeat_generators.py  heartbeat_targets.py  loop.py  manifest.py  manifest_binder.py  orchestrator.py  reconciler.py  registry.py  schema.py  setpoint_drift_reconciler.py  system_controller.py  type_registry.py
csp_lib/manager/: __init__.py  base.py  in_memory_uploader.py  unified.py
csp_lib/modbus/: __init__.py  _pymodbus.py  codec.py  config.py  enums.py  exceptions.py
csp_lib/modbus_gateway/: __init__.py  config.py  datablock.py  errors.py  heartbeat_target.py  hooks.py  pipeline.py  protocol.py  register_map.py  registry_sync_source.py  rules.py  server.py  sync_sources.py  validators.py  watchdog.py
csp_lib/modbus_server/: __init__.py  config.py  microgrid.py  register_block.py  server.py
csp_lib/mongo/: __init__.py  client.py  config.py  queue.py  uploader.py  writer.py
csp_lib/monitor/: __init__.py  alarm.py  collector.py  config.py  distributed.py  manager.py  publisher.py
csp_lib/notification/: __init__.py  base.py  batch_config.py  batcher.py  config.py  dispatcher.py  event.py
csp_lib/redis/: __init__.py  client.py  config.py  log_level_source.py
csp_lib/statistics/: __init__.py  config.py  engine.py  manager.py  tracker.py
docs/: CI_MIGRATION.md  Home.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
docs/00-Guide/: Linking Conventions.md  Tag Taxonomy.md  _MOC Guide.md
docs/01-Architecture/: Async Patterns.md  Data Flow.md  Design Patterns.md  Event System.md  Layered Architecture.md  Manager Layer.md  Operator Pattern.md  Optional Dependencies.md  Reconciliation Pattern.md  System Diagrams.md  _MOC Architecture.md
docs/02-Core/: AsyncLifecycleMixin.md  Error Hierarchy.md  Health Check.md  Logging.md  Reconciler.md  Resilience.md  RuntimeParameters.md  _MOC Core.md
docs/03-CAN/: CAN Clients.md  CAN Configuration.md  CAN Exceptions.md  _MOC CAN.md
docs/03-Modbus/: Clients.md  Configuration.md  Data Types.md  Enums.md  Exceptions.md  ModbusCodec.md  _MOC Modbus.md
docs/04-Equipment/: ActionDeviceProtocol.md  Aggregators.md  Alarm Evaluators.md  AlarmDefinition.md  AlarmStateManager.md  AsyncCANDevice.md  AsyncModbusDevice.md  CANEncoder.md  CurveRegistry.md  DOActions.md  DeviceConfig.md  DeviceEventEmitter.md  DeviceProtocol.md  GroupReader.md  PeriodicSendScheduler.md  PointGrouper.md  ProcessingPipeline.md  ReadPoint.md  ReadScheduler.md  Transforms.md  ValidatedWriter.md  Validators.md  VirtualMeter.md  WritePoint.md  _MOC Equipment.md
docs/05-Controller/: BypassStrategy.md  CascadingStrategy.md  Command.md  CommandProcessor.md  ConfigMixin.md  DroopStrategy.md  DynamicSOCProtection.md  EventDrivenOverride.md  ExecutionMode.md  FFCalibrationStrategy.md  FFTableRepository.md  FPStrategy.md  GridLimitProtection.md  HistoryBuffer.md  IslandModeStrategy.md  LoadSheddingStrategy.md  ModeManager.md  PQModeStrategy.md  PVDataService.md  PVSmoothStrategy.md  PowerCompensator.md  ProtectionGuard.md  QVStrategy.md  RampStopStrategy.md  ReversePowerProtection.md  SOCProtection.md  ScheduleModeController.md  ScheduleStrategy.md  StopStrategy.md  Strategy.md  StrategyContext.md  StrategyDiscovery.md  StrategyExecutor.md  SystemAlarmProtection.md  SystemBase.md  _MOC Controller.md
docs/06-Integration/: AggregateFunc.md  CapabilityBinding Integration.md  CapabilityCommandMapping.md  CapabilityContextMapping.md  CapabilityRequirement.md  CommandMapping.md  CommandRouter.md  ContextBuilder.md  ContextMapping.md  DataFeedMapping.md  DeviceDataFeed.md  DeviceRegistry.md  GridControlLoop.md  GroupControllerManager.md  PowerDistributor.md  SystemController.md  _MOC Integration.md
docs/07-Manager/: BatchUploader.md  (+13 more)
examples/: 01_basic_device.py  01_hello_device.py  02_device_template.py  03_control_strategies.py  04_grid_control_loop.py  04_system_controller.py  05_device_manager.py  05_system_controller.py  06_advanced_protection.py  06_custom_strategy.py  07_cascading_power.py  07_manager_unified.py  08_alarm_notification.py  08_custom_strategy.py  09_advanced_strategies.py  09_custom_database.py  10_capability_system.py  11_cascading_strategy.py  11_modbus_gateway.py  12_cluster_controller.py  12_distributed_control.py  13_can_device.py  13_microgrid_simulation.py  14_logging_system.py  15_modbus_gateway.py  15_runtime_parameters.py  16_operator_pattern.py  17_multi_unit_device.py  18_write_validation.py  19_custom_database.py  20_multi_meter_simulation.py  README.md  demo_ess_dreg.py
scripts/: bump_version.py  check_commit_msg.new.py  check_commit_msg.py
tests/: conftest.py  helpers.py  test_import_guards.py
(+528 files in other folders)
