[project]
name = "csp0924_lib"
dynamic = ["version"]
description = "CSP Common Library - 模組化工具集"
authors = [
    {name = "Cheng Sin Pang (鄭善淜)", email = "donaldpang123@gmail.com"},
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
mongo = [
    "motor>=3.0.0",
]
redis = [
    "redis>=5.0.0",
]
modbus = [
    "pymodbus>=3.0.0",
]
can = [
    "python-can>=4.0",
]
monitor = [
    "psutil>=5.9.0",
]
cluster = [
    "etcetra>=0.1.0",
]
gui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "python-multipart"
]
all = [
    "csp0924_lib[mongo,redis,modbus,can,monitor,cluster,gui]",
]

# =============== Build System (Cython Binary Distribution) ===============
[build-system]
requires = ["setuptools>=75.0.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "csp_lib.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["csp_lib", "csp_lib.*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.so", "*.pyi", "py.typed"]
"csp_lib.gui" = ["static/**/*"]

# =============== Development Dependencies ===============
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "cython>=3.0.0",
    "setuptools>=80.9.0",
    "build>=1.4.0",
    "mypy>=1.19.1",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

# =============== UV Overrides ===============
[tool.uv]
override-dependencies = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "protobuf>=4.25.3",
]

# =============== Ruff (Linting + Formatting) ===============
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    # "UP" 已移除 - pyupgrade 的 A | B 語法與 stubgen 不相容
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B027",   # empty method in abstract class (intentional optional hooks)
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["E402"]  # setup.py 需要先檢查環境變數再 import
"csp_lib/gui/api/*.py" = ["B008"]  # FastAPI Depends() in defaults is the intended pattern
