[project]
name = "csp0924_lib"
dynamic = ["version"]
description = "CSP Common Library - 模組化工具集"
authors = [
    {name = "Cheng Sin Pang (鄭善淜)", email = "donaldpang123@gmail.com"},
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.0,<0.8",
]

[project.optional-dependencies]
mongo = [
    "motor>=3.0.0,<4.0",
]
local-buffer = [
    "aiosqlite>=0.19.0,<0.21"
]
redis = [
    "redis>=5.0.0,<8.0",
]
modbus = [
    "pymodbus>=3.0.0,<3.13",
]
can = [
    "python-can>=4.0,<5.0",
]
monitor = [
    "psutil>=5.9.0,<8.0",
]
cluster = [
    "etcetra>=0.1.0,<0.2",
    "grpcio>=1.64.0,<2.0",
    "grpcio-tools>=1.64.0,<2.0",
    "protobuf>=4.25.3,<8.0",
]
gui = [
    "fastapi>=0.115.0,<0.137",
    "uvicorn[standard]>=0.30.0,<0.42",
    "pyyaml>=6.0,<7.0",
    "python-multipart>=0.0.20,<1.0",
]
all = [
    "csp0924_lib[mongo,redis,modbus,can,monitor,gui,local-buffer]",
]

# =============== Build System ===============
[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "csp_lib.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["csp_lib", "csp_lib.*"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
"csp_lib.gui" = ["static/**/*"]

# =============== Development Dependencies ===============
[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=6.0.0,<8.0",
    "pytest-xdist>=3.5.0,<4.0",
    "build>=1.4.0,<2.0",
    "mypy>=1.19.1,<2.0",
    "ruff>=0.11.0,<0.16",
    "pre-commit>=4.0.0,<5.0",
    "httpx>=0.27.0,<0.29",
    "tzdata>=2024.1",
]

# =============== UV Overrides ===============
[tool.uv]
override-dependencies = [
    "grpcio>=1.64.0,<2.0",
    "grpcio-tools>=1.64.0,<2.0",
    "protobuf>=4.25.3,<8.0",
]

# =============== Ruff (Linting + Formatting) ===============
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    # "UP" 已移除 - pyupgrade 的 A | B 語法與 stubgen 不相容
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B027",   # empty method in abstract class (intentional optional hooks)
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"csp_lib/gui/api/*.py" = ["B008"]  # FastAPI Depends() in defaults is the intended pattern

# =============== Mypy (Type Checking) ===============
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true

# 第三方 library stubs 不完整，暫時跳過
[[tool.mypy.overrides]]
module = [
    "csp_lib.modbus.clients.client",
    "csp_lib.redis.client",
    "csp_lib.cluster.election",
]
ignore_errors = true

# =============== Pytest ===============
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n auto --dist loadfile"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "flaky: marks tests known to be flaky",
    "requires_external: marks tests requiring external services (MongoDB, Redis)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pymodbus.*",
    "ignore::DeprecationWarning:motor.*",
    "ignore::DeprecationWarning:redis.*",
]
